--- a/homepage/package.json
+++ b/homepage/package.json
@@ -11,9 +11,11 @@
     "core-js": "^3.4.4",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-router": "^3.1.5",
     "vuetify": "^2.1.0"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.1",
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
