--- a/homepage/package.json
+++ b/homepage/package.json
@@ -12,6 +12,7 @@
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.1.5",
+    "vuejs-countdown": "^0.2.1",
     "vuetify": "^2.1.0"
   },
   "devDependencies": {
