--- a/homepage/package.json
+++ b/homepage/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.4.4",
+    "jquery": "^3.4.1",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
     "vue-cli-plugin-s3-deploy": "^4.0.0-rc3",
