--- a/homepage/package.json
+++ b/homepage/package.json
@@ -9,11 +9,13 @@
     "deploy": "vue-cli-service s3-deploy"
   },
   "dependencies": {
+    "aws-amplify": "^3.0.11",
+    "aws-amplify-vue": "^2.1.1",
     "aws-sdk": "^2.679.0",
     "axios": "^0.19.2",
     "core-js": "^3.4.4",
     "dotenv": "^8.2.0",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
     "vue-carousel": "^0.18.0",
